--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,4 @@
+name: iVXjs
+description: A library to make data-driven interactive web-experiences with support for video, sound, data collection, decision-trees and animations.
 theme: minima
+
