Added documentation for Module Injection

--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "index.js",
   "scripts": {
     "build": "node_modules/.bin/npm-run-all \"dist\" \"docs:esdocs\"",
-    "demo:all:update-js" : "node_modules/.bin/npm-run-all \"demo:hello-world:update-js\" \"demo:iphone-inline:update-js\" \"demo:ivx-io:update-js\"  \"demo:set-up-a-404-state:update-js\"  \"demo:templates:update-js\" ",
+    "demo:all:update-js" : "node_modules/.bin/npm-run-all \"demo:module-injection:update-js\" \"demo:hello-world:update-js\" \"demo:iphone-inline:update-js\" \"demo:ivx-io:update-js\"  \"demo:set-up-a-404-state:update-js\"  \"demo:templates:update-js\" ",
     "demo:hello-world:update-js" : "node_modules/.bin/copyfiles -u 1 dist/*.js demos/hello-world/js/lib",
     "demo:iphone-inline:update-js" : "node_modules/.bin/copyfiles -u 1 dist/*.js demos/iphone-inline/js/lib",
     "demo:ivx-io:update-js" : "node_modules/.bin/copyfiles -u 1 dist/*.js demos/ivx-io/js/lib",
+    "demo:module-injection:update-js" : "node_modules/.bin/npm-run-all demo:module-injection:angular-ivxjs:update-js demo:module-injection:bootstrap:update-js",    
+    "demo:module-injection:angular-ivxjs:update-js" : "node_modules/.bin/copyfiles -u 1 dist/*.js demos/module-injection/js/lib",    
+    "demo:module-injection:bootstrap:update-js" : "node_modules/.bin/copyfiles -u 4 tools/modules/ui/bootstrap/*.js demos/module-injection/js/lib",        
     "demo:set-up-a-404-state:update-js" : "node_modules/.bin/copyfiles -u 1 dist/*.js demos/set-up-a-404-state/js/lib",
     "demo:templates:update-js" : "node_modules/.bin/copyfiles -u 1 dist/*.js demos/templates/js/lib",
     "dist": "node_modules/.bin/npm-run-all \"dist:angular-ivx-js\" \"dist:angular-ivx-js:compress\" \"demo:all:update-js\" ",
