--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ivx-js",
-  "version": "1.0.0",
+  "version": "0.7.0",
   "description": "An interactive experience src. ",
   "main": "index.js",
   "scripts": {
-    "build": "node_modules/.bin/npm-run-all \"dist\" \"docs:esdocs\"",
+    "build": "node_modules/.bin/npm-run-all  \"github:build:cdn\" ",
     "demo:all:update-js" : "node_modules/.bin/npm-run-all \"demo:module-injection:update-js\" \"demo:hello-world:update-js\" \"demo:iphone-inline:update-js\" \"demo:ivx-io:update-js\"  \"demo:set-up-a-404-state:update-js\"  \"demo:templates:update-js\" ",
     "demo:hello-world:update-js" : "node_modules/.bin/copyfiles -u 1 dist/*.js demos/hello-world/js/lib",
     "demo:iphone-inline:update-js" : "node_modules/.bin/copyfiles -u 1 dist/*.js demos/iphone-inline/js/lib",
@@ -28,9 +28,10 @@
     "docs:developer:watch": "node_modules/.bin/watch \"node_modules/.bin/esdoc -c docs/esdoc-manuals.json\" \"docs/developer\"",
     "docs:developer:update-sample-json": "node_modules/.bin/watch \"npm run docs:developer:move-sample-json\" \"docs/developer/sample-json\"",
     "docs:watch-files": "node_modules/.bin/watch \"npm run dev:create-docs\" \"src\"",
+    "github:build:cdn" : "node tools/build-scripts/build-module-deps.js --output cdn",
     "modules:data:watch-module:firebase:compress" : "node tools/build-scripts/watch-module-deps.js --output sandbox --input data.firebase",
     "modules:ui:watch-module:materialize:compress" : "node tools/build-scripts/watch-module-deps.js --output sandbox --input ui.materialize",
-    "test": "npm run test:start",
+    "test": "node_modules/.bin/karma start karma.conf.js",
     "test:create-server": "node_modules/.bin/browser-sync start --server docs --files \"docs/**/*.*\" --startPath \"tests/karma-tests\" --port 8890 --ui-port 8891",
     "test:start": "node_modules/.bin/npm-run-all -p test:create-server test:start:karma",
     "test:start:karma": "node_modules/.bin/karma start karma.conf.js",
@@ -87,6 +88,8 @@
     "karma-html-reporter": "^0.2.7",
     "karma-jasmine": "^0.3.5",
     "karma-json-fixtures-preprocessor": "0.0.6",
+     "karma-phantomjs-launcher": "^1.0.2",
+    "karma-teamcity-reporter": "^1.0.0",
     "karma-mocha-reporter": "^2.0.1",
     "less": "^2.6.1",
     "less-plugin-clean-css": "^1.5.1",
