--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   "license": "ISC",
   "devDependencies": {
     "angular": "^1.5.0",
-    "angular-sanitize": "^1.5.0",
+    "angular-sanitize": "1.5.8",
     "babel": "^6.5.2",
     "babel-polyfill": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
