--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "angular": "^1.5.0",
     "angular-sanitize": "1.5.8",
     "babel": "^6.5.2",
-    "babel-polyfill": "^6.8.0",
+    "babel-polyfill": "6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browser-sync": "^2.11.1",
