--- a/package.json
+++ b/package.json
@@ -64,43 +64,42 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "angular": "^1.5.0",
+    "angular": "1.5.0",
     "angular-sanitize": "1.5.8",
-    "babel": "^6.5.2",
+    "babel": "6.5.2",
     "babel-polyfill": "6.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babelify": "^7.2.0",
-    "browser-sync": "^2.11.1",
-    "browserify": "^13.0.0",
-    "browserify-istanbul": "^2.0.0",
-    "copyfiles": "^0.2.1",
-    "esdoc": "^0.4.6",
-    "isparta": "^4.0.0",
-    "istanbul": "^0.4.3",
-    "jasmine-core": "^2.2.0",
+    "babel-preset-es2015": "6.6.0",
+    "babelify": "7.2.0",
+    "browser-sync": "2.11.1",
+    "browserify": "13.0.0",
+    "browserify-istanbul": "2.0.0",
+    "copyfiles": "0.2.1",
+    "esdoc": "0.4.6",
+    "isparta": "4.0.0",
+    "istanbul": "0.4.3",
+    "jasmine-core": "2.2.0",
     "karma": "*",
-    "karma-babel-preprocessor": "^6.0.1",
-    "karma-browserify": "^5.0.3",
-    "karma-chrome-launcher": "^0.1.7",
-    "karma-coverage": "^0.5.5",
-    "karma-coverage-es6": "^0.2.7",
-    "karma-fixture": "^0.2.6",
-    "karma-html-reporter": "^0.2.7",
-    "karma-jasmine": "^0.3.5",
+    "karma-babel-preprocessor": "6.0.1",
+    "karma-browserify": "5.0.3",
+    "karma-chrome-launcher": "^.1.7",
+    "karma-coverage": "0.5.5",
+    "karma-coverage-es6": "0.2.7",
+    "karma-fixture": "0.2.6",
+    "karma-html-reporter": "0.2.7",
+    "karma-jasmine": "0.3.5",
     "karma-json-fixtures-preprocessor": "0.0.6",
-     "karma-phantomjs-launcher": "^1.0.2",
-    "karma-teamcity-reporter": "^1.0.0",
-    "karma-mocha-reporter": "^2.0.1",
-    "less": "^2.6.1",
-    "less-plugin-clean-css": "^1.5.1",
-    "mkdirp": "^0.5.1",
-    "npm-run-all": "^1.7.0",
-    "rimraf": "^2.5.2",
-    "traceur": "0.0.108",
-    "tv4": "^1.2.7",
-    "uglifyify": "^3.0.1",
-    "watch": "^0.17.1",
-    "watchify": "^3.7.0"
+     "karma-phantomjs-launcher": "1.0.2",
+    "karma-teamcity-reporter": "1.0.0",
+    "karma-mocha-reporter": "2.0.1",
+    "less": "2.6.1",
+    "less-plugin-clean-css": "1.5.1",
+    "mkdirp": "0.5.1",
+    "npm-run-all": "1.7.0",
+    "rimraf": "2.5.2",
+    "tv4": "1.2.7",
+    "uglifyify": "3.0.1",
+    "watch": "0.17.1",
+    "watchify": "3.7.0"
   },
   "dependencies": {}
 }
