--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "karma": "*",
     "karma-babel-preprocessor": "6.0.1",
     "karma-browserify": "5.0.3",
-    "karma-chrome-launcher": "^.1.7",
+    "karma-chrome-launcher": "0.1.7",
     "karma-coverage": "0.5.5",
     "karma-coverage-es6": "0.2.7",
     "karma-fixture": "0.2.6",
