--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 node_js:
 - 0.6
+before_install: if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
 before_deploy : "cd build/cdn"
 deploy:
   provider: cloudfiles
