--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
 - 0.6
-before_install: if [[ `npm -v` != 3* ]]; then npm i -g npm@3; fi
+before_install: npm i -g npm@3
 before_deploy : "cd build/cdn"
 deploy:
   provider: cloudfiles
