--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: node_js
 node_js:
 - 0.6
-before_install: npm i -g npm@3
+before_install: 
+    - npm i -g npm@2
 before_deploy : "cd build/cdn"
 deploy:
   provider: cloudfiles
