--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "karma-mocha-reporter": "2.0.1",
     "less": "2.6.1",
     "less-plugin-clean-css": "1.5.1",
+    "minimist" : "1.2.0",
     "mkdirp": "0.5.1",
     "npm-run-all": "1.7.0",
     "rimraf": "2.5.2",
