--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "github:build:cdn" : "node tools/build-scripts/build-module-deps.js --output cdn",
     "modules:data:watch-module:firebase:compress" : "node tools/build-scripts/watch-module-deps.js --output sandbox --input data.firebase",
     "modules:ui:watch-module:materialize:compress" : "node tools/build-scripts/watch-module-deps.js --output sandbox --input ui.materialize",
-    "test": "npm run test:start:karma",
+    "test": "npm run test:start:karma:single-run",
     "test:create-server": "node_modules/.bin/browser-sync start --server docs --files \"docs/**/*.*\" --startPath \"tests/karma-tests\" --port 8890 --ui-port 8891",
     "test:start": "node_modules/.bin/npm-run-all -p test:create-server test:start:karma",
     "test:start:karma": "node_modules/.bin/karma start karma.conf.js",
+    "test:start:karma:single-run": "node_modules/.bin/karma start karma.conf.js --single-run",    
     "tools:sandbox:create": "node_modules/.bin/npm-run-all \"tools:sandbox:create:make-file-structure\" \"tools:sandbox:create:copy-index\" \"tools:sandbox:create:copy-data\"  \"tools:sandbox:create:copy-project-less\" \"tools:sandbox:create:copy-ivx-js-less\" \"tools:sandbox:project:make-css\" \"tools:sandbox:project:make-css:compress\" \"tools:sandbox:make-angular-ivx-js\" \"tools:sandbox:make-angular-ivx-js:compress\"   ",
     "tools:sandbox:create:copy-index": "node_modules/.bin/copyfiles -f tools/deps/sandbox-init/index.html tools/sandbox/public",
     "tools:sandbox:create:copy-data": "node_modules/.bin/copyfiles -f tools/deps/sandbox-init/sandbox-init.json tools/sandbox/public/data",
