Cascading Dropdown Support

--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "main": "index.js",
   "scripts": {
     "build": "node_modules/.bin/npm-run-all  \"github:build:cdn\" ",
-    "demo:all:update-js" : "node_modules/.bin/npm-run-all \"demo:module-injection:update-js\" \"demo:hello-world:update-js\" \"demo:iphone-inline:update-js\" \"demo:ivx-io:update-js\"  \"demo:set-up-a-404-state:update-js\"  \"demo:templates:update-js\" ",
-    "demo:hello-world:update-js" : "node_modules/.bin/copyfiles -u 1 dist/*.js demos/hello-world/js/lib",
-    "demo:iphone-inline:update-js" : "node_modules/.bin/copyfiles -u 1 dist/*.js demos/iphone-inline/js/lib",
-    "demo:ivx-io:update-js" : "node_modules/.bin/copyfiles -u 1 dist/*.js demos/ivx-io/js/lib",
-    "demo:module-injection:update-js" : "node_modules/.bin/npm-run-all demo:module-injection:angular-ivxjs:update-js demo:module-injection:bootstrap:update-js",    
-    "demo:module-injection:angular-ivxjs:update-js" : "node_modules/.bin/copyfiles -u 1 dist/*.js demos/module-injection/js/lib",    
-    "demo:module-injection:bootstrap:update-js" : "node_modules/.bin/copyfiles -u 4 tools/modules/ui/bootstrap/*.js demos/module-injection/js/lib",        
-    "demo:set-up-a-404-state:update-js" : "node_modules/.bin/copyfiles -u 1 dist/*.js demos/set-up-a-404-state/js/lib",
-    "demo:templates:update-js" : "node_modules/.bin/copyfiles -u 1 dist/*.js demos/templates/js/lib",
+    "demo:all:update-js": "node_modules/.bin/npm-run-all \"demo:module-injection:update-js\" \"demo:hello-world:update-js\" \"demo:iphone-inline:update-js\" \"demo:ivx-io:update-js\"  \"demo:set-up-a-404-state:update-js\"  \"demo:templates:update-js\" ",
+    "demo:hello-world:update-js": "node_modules/.bin/copyfiles -u 1 dist/*.js demos/hello-world/js/lib",
+    "demo:iphone-inline:update-js": "node_modules/.bin/copyfiles -u 1 dist/*.js demos/iphone-inline/js/lib",
+    "demo:ivx-io:update-js": "node_modules/.bin/copyfiles -u 1 dist/*.js demos/ivx-io/js/lib",
+    "demo:module-injection:update-js": "node_modules/.bin/npm-run-all demo:module-injection:angular-ivxjs:update-js demo:module-injection:bootstrap:update-js",
+    "demo:module-injection:angular-ivxjs:update-js": "node_modules/.bin/copyfiles -u 1 dist/*.js demos/module-injection/js/lib",
+    "demo:module-injection:bootstrap:update-js": "node_modules/.bin/copyfiles -u 4 tools/modules/ui/bootstrap/*.js demos/module-injection/js/lib",
+    "demo:set-up-a-404-state:update-js": "node_modules/.bin/copyfiles -u 1 dist/*.js demos/set-up-a-404-state/js/lib",
+    "demo:templates:update-js": "node_modules/.bin/copyfiles -u 1 dist/*.js demos/templates/js/lib",
     "dist": "node_modules/.bin/npm-run-all \"dist:angular-ivx-js\" \"dist:angular-ivx-js:compress\" \"demo:all:update-js\" ",
     "dist:angular-ivx-js": "node_modules/.bin/browserify src/angular/app.js -o dist/angular.ivx.js -t [ babelify --presets [ es2015 ] ] -v --debug",
     "dist:angular-ivx-js:compress": "node_modules/.bin/browserify -g uglifyify src/angular/app.js  -t [ babelify --presets [ es2015 ] ] > dist/angular.ivx.min.js",
@@ -22,20 +22,20 @@
     "docs:create-server": "node_modules/.bin/browser-sync start --server docs/esdocs --files \"docs/esdocs/**/*.*\" --port 8890 --ui-port 8891",
     "docs:esdocs": "node_modules/.bin/esdoc -c docs/esdoc.json",
     "docs:edit": "node_modules/.bin/npm-run-all -p dev:create-docs dev:create-docs:create-server dev:create-docs:watch-files",
-    "docs:developer:create-server" : "node_modules/.bin/browser-sync start --server docs/esdocs --files \"docs/esdocs/manual/**/*.*\" --port 8890 --ui-port 8891",
+    "docs:developer:create-server": "node_modules/.bin/browser-sync start --server docs/esdocs --files \"docs/esdocs/manual/**/*.*\" --port 8890 --ui-port 8891",
     "docs:developer:edit": "node_modules/.bin/npm-run-all -p docs:developer:watch docs:developer:update-sample-json \"docs:developer:create-server\"",
     "docs:developer:move-sample-json": "node_modules/.bin/copyfiles -f -u 1 docs/developer/sample-json/*.json docs/esdocs/manual/sample-json",
     "docs:developer:watch": "node_modules/.bin/watch \"node_modules/.bin/esdoc -c docs/esdoc-manuals.json\" \"docs/developer\"",
     "docs:developer:update-sample-json": "node_modules/.bin/watch \"npm run docs:developer:move-sample-json\" \"docs/developer/sample-json\"",
     "docs:watch-files": "node_modules/.bin/watch \"npm run dev:create-docs\" \"src\"",
-    "github:build:cdn" : "node tools/build-scripts/build-module-deps.js --output cdn",
-    "modules:data:watch-module:firebase:compress" : "node tools/build-scripts/watch-module-deps.js --output sandbox --input data.firebase",
-    "modules:ui:watch-module:materialize:compress" : "node tools/build-scripts/watch-module-deps.js --output sandbox --input ui.materialize",
+    "github:build:cdn": "node tools/build-scripts/build-module-deps.js --output cdn",
+    "modules:data:watch-module:firebase:compress": "node tools/build-scripts/watch-module-deps.js --output sandbox --input data.firebase",
+    "modules:ui:watch-module:materialize:compress": "node tools/build-scripts/watch-module-deps.js --output sandbox --input ui.materialize",
     "test": "npm run test:start:karma:single-run",
     "test:create-server": "node_modules/.bin/browser-sync start --server docs --files \"docs/**/*.*\" --startPath \"tests/karma-tests\" --port 8890 --ui-port 8891",
     "test:start": "node_modules/.bin/npm-run-all -p test:create-server test:start:karma",
     "test:start:karma": "node_modules/.bin/karma start karma.conf.js",
-    "test:start:karma:single-run": "node_modules/.bin/karma start karma.conf.js --single-run",    
+    "test:start:karma:single-run": "node_modules/.bin/karma start karma.conf.js --single-run",
     "tools:sandbox:create": "node_modules/.bin/npm-run-all \"tools:sandbox:create:make-file-structure\" \"tools:sandbox:create:copy-index\" \"tools:sandbox:create:copy-data\"  \"tools:sandbox:create:copy-project-less\" \"tools:sandbox:create:copy-ivx-js-less\" \"tools:sandbox:project:make-css\" \"tools:sandbox:project:make-css:compress\" \"tools:sandbox:make-angular-ivx-js\" \"tools:sandbox:make-angular-ivx-js:compress\"   ",
     "tools:sandbox:create:copy-index": "node_modules/.bin/copyfiles -f tools/deps/sandbox-init/index.html tools/sandbox/public",
     "tools:sandbox:create:copy-data": "node_modules/.bin/copyfiles -f tools/deps/sandbox-init/sandbox-init.json tools/sandbox/public/data",
@@ -44,8 +44,8 @@
     "tools:sandbox:create:copy-ivx-js-less": "node_modules/.bin/copyfiles -f \"tools/less/*.less\" \"tools/less/**/*.less\" tools/sandbox/project/less/ivx-js",
     "tools:sandbox:create:es6-project": "node_modules/.bin/npm-run-all \"tools:sandbox:create\"  \"tools:sandbox:create:copy-es6-project-js\"  \"tools:sandbox:make-es6-project-js\" \"tools:sandbox:make-es6-project-js:compress\" ",
     "tools:sandbox:create:make-file-structure": "node_modules/.bin/mkdirp \"tools/sandbox/public/css\" \"tools/sandbox/public/js/lib\" \"tools/sandbox/public/data\" \"tools/sandbox/project/less\" \"tools/sandbox/public/templates\" ",
-    "tools:sandbox:make-angular-ivx-js" : "node_modules/.bin/browserify src/angular/app.js -o tools/sandbox/public/js/lib/angular.ivx.js  -t [ babelify --presets [ es2015 ] ] -v --debug",
-    "tools:sandbox:make-angular-ivx-js:compress" : "node_modules/.bin/browserify -g uglifyify src/angular/app.js -o tools/sandbox/public/js/lib/angular.ivx.min.js  -t [ babelify --presets [ es2015 ] ] -v --debug",
+    "tools:sandbox:make-angular-ivx-js": "node_modules/.bin/browserify src/angular/app.js -o tools/sandbox/public/js/lib/angular.ivx.js  -t [ babelify --presets [ es2015 ] ] -v --debug",
+    "tools:sandbox:make-angular-ivx-js:compress": "node_modules/.bin/browserify -g uglifyify src/angular/app.js -o tools/sandbox/public/js/lib/angular.ivx.min.js  -t [ babelify --presets [ es2015 ] ] -v --debug",
     "tools:sandbox:make-es6-project-js": "node_modules/.bin/browserify tools/sandbox/project/js/index.js -o tools/sandbox/public/js/project.js  -t [ babelify --presets [ es2015 ] ] -v --debug",
     "tools:sandbox:make-es6-project-js:compress": "node_modules/.bin/browserify -g uglifyify tools/sandbox/project/js/index.js -o tools/sandbox/public/js/project.min.js  -t [ babelify --presets [ es2015 ] ] -v --debug",
     "tools:sandbox:project:make-css": "node_modules/.bin/lessc \"tools/sandbox/project/less/styles.less\" \"tools/sandbox/public/css/styles.css\"",
@@ -55,8 +55,8 @@
     "tools:sandbox:start:compress": "node_modules/.bin/npm-run-all -p  \"tools:sandbox:watch-angular-ivx-js:compress\" \"tools:sandbox:watch-project-less:compress\" \"tools:sandbox:server:run\"",
     "tools:sandbox:start:es6-project": "node_modules/.bin/npm-run-all -p \"tools:sandbox:start\" \"tools:sandbox:watch-es6-project-js\"",
     "tools:sandbox:start:es6-project:compress": "node_modules/.bin/npm-run-all -p \"tools:sandbox:start:compress\" \"tools:sandbox:watch-es6-project-js:compress\"",
-    "tools:sandbox:watch-angular-ivx-js" : "node_modules/.bin/watchify src/angular/app.js -o tools/sandbox/public/js/lib/angular.ivx.js  -t [ babelify --presets [ es2015 ] ] -v --debug",
-    "tools:sandbox:watch-angular-ivx-js:compress" : "node_modules/.bin/watchify -g uglifyify src/angular/app.js -o tools/sandbox/public/js/lib/angular.ivx.min.js  -t [ babelify --presets [ es2015 ] ]",
+    "tools:sandbox:watch-angular-ivx-js": "node_modules/.bin/watchify src/angular/app.js -o tools/sandbox/public/js/lib/angular.ivx.js  -t [ babelify --presets [ es2015 ] ] -v --debug",
+    "tools:sandbox:watch-angular-ivx-js:compress": "node_modules/.bin/watchify -g uglifyify src/angular/app.js -o tools/sandbox/public/js/lib/angular.ivx.min.js  -t [ babelify --presets [ es2015 ] ]",
     "tools:sandbox:watch-es6-project-js": "node_modules/.bin/watchify tools/sandbox/project/js/index.js -o tools/sandbox/public/js/project.js  -t [ babelify --presets [ es2015 ] ] -v --debug",
     "tools:sandbox:watch-es6-project-js:compress": "node_modules/.bin/watchify -g uglifyify tools/sandbox/project/js/index.js -o tools/sandbox/public/js/project.min.js  -t [ babelify --presets [ es2015 ] ]",
     "tools:sandbox:watch-project-less": "node_modules/.bin/watch \"npm run tools:sandbox:project:make-css\" \"tools/sandbox/project/less\"",
@@ -89,12 +89,12 @@
     "karma-html-reporter": "0.2.7",
     "karma-jasmine": "0.3.5",
     "karma-json-fixtures-preprocessor": "0.0.6",
-     "karma-phantomjs-launcher": "1.0.2",
-    "karma-teamcity-reporter": "1.0.0",
     "karma-mocha-reporter": "2.0.1",
+    "karma-phantomjs-launcher": "1.0.2",
+    "karma-teamcity-reporter": "1.0.0",
     "less": "2.6.1",
     "less-plugin-clean-css": "1.5.1",
-    "minimist" : "1.2.0",
+    "minimist": "1.2.0",
     "mkdirp": "0.5.1",
     "npm-run-all": "1.7.0",
     "rimraf": "2.5.2",
@@ -103,5 +103,7 @@
     "watch": "0.17.1",
     "watchify": "3.7.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "errorify": "^0.3.1"
+  }
 }
