Fixed some minor bugs

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "node build.js --should-build",
-    "setup" : "node build.js --should-build --setup",
+    "setup": "node build.js --should-build --setup",
     "start": "node build.js --local --should-build --modules true"
   },
   "author": "",
@@ -56,6 +56,7 @@
     "live-server": "^1.2.0",
     "lodash": "^4.17.4",
     "semver": "^5.3.0",
+    "teamcity-properties": "^1.1.0",
     "watch-glob": "^0.1.3"
   }
 }
