--- a/package.json
+++ b/package.json
@@ -6,58 +6,43 @@
   "scripts": {
     "build": "node build.js --should-build",
     "setup": "node build.js --should-build --setup",
-    "start": "node build.js --local --should-build --modules true"
+    "start": "webpack-dev-server --open"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "angular": "1.5.0",
-    "angular-sanitize": "1.5.8",
-    "babel": "6.5.2",
-    "babel-polyfill": "6.8.0",
-    "babel-preset-es2015": "6.6.0",
-    "babelify": "7.2.0",
-    "browser-sync": "2.11.1",
-    "browserify": "13.0.0",
-    "browserify-istanbul": "2.0.0",
-    "copyfiles": "0.2.1",
-    "esdoc": "0.4.6",
-    "isparta": "4.0.0",
-    "istanbul": "0.4.3",
-    "jasmine-core": "2.2.0",
-    "karma": "*",
-    "karma-babel-preprocessor": "6.0.1",
-    "karma-browserify": "5.0.3",
-    "karma-chrome-launcher": "0.1.7",
-    "karma-coverage": "0.5.5",
-    "karma-coverage-es6": "0.2.7",
-    "karma-fixture": "0.2.6",
-    "karma-html-reporter": "0.2.7",
-    "karma-jasmine": "0.3.5",
-    "karma-json-fixtures-preprocessor": "0.0.6",
-    "karma-mocha-reporter": "2.0.1",
-    "karma-phantomjs-launcher": "1.0.2",
-    "karma-teamcity-reporter": "1.0.0",
-    "less": "2.6.1",
-    "less-plugin-clean-css": "1.5.1",
-    "minimist": "1.2.0",
-    "mkdirp": "0.5.1",
-    "npm-run-all": "1.7.0",
-    "rimraf": "2.5.2",
-    "tv4": "1.2.7",
-    "uglifyify": "3.0.1",
-    "watch": "0.17.1",
-    "watchify": "3.7.0"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-minify-webpack-plugin": "^0.2.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "browser-sync": "^2.18.13",
+    "browser-sync-webpack-plugin": "^1.2.0",
+    "connect-history-api-fallback": "^1.4.0",
+    "copy-webpack-plugin": "^4.2.0",
+    "copyfiles": "^1.2.0",
+    "css-loader": "^0.28.7",
+    "html-webpack-plugin": "^2.30.1",
+    "immutable": "^3.8.2",
+    "json-loader": "^0.5.7",
+    "lodash": "^4.17.4",
+    "raw-loader": "^0.5.1",
+    "style-loader": "^0.19.0",
+    "supports-color": "^5.0.0",
+    "webpack": "^3.8.1",
+    "webpack-cleanup-plugin": "^0.5.1",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-server": "^2.9.3",
+    "webpack-hot-middleware": "^2.20.0"
   },
   "dependencies": {
     "colors": "^1.1.2",
     "errorify": "^0.3.1",
-    "immutable": "^3.8.1",
     "live-server": "^1.2.0",
-    "lodash": "^4.17.4",
     "pkgcloud": "^1.4.0",
     "semver": "^5.3.0",
     "teamcity-properties": "^1.1.0",
-    "watch-glob": "^0.1.3"
+    "watch-glob": "^0.1.3",
+    "yargs": "^10.0.3"
   }
 }
