--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "node build.js --should-build",
     "setup": "node build.js --should-build --setup",
-    "start": "webpack-dev-server --open"
+    "webpack-dev-server" : "node_modules/.bin/webpack-dev-server --open",
+    "local-build": "node build.js --should-build --local --ui=$UI --data=$DATA --validation=$VALIDATION --analytics=$ANALYTICS",
+    "start" : "node_modules/.bin/npm-run-all -p webpack-dev-server local-build"
   },
   "author": "",
   "license": "ISC",
@@ -16,9 +18,6 @@
     "babel-minify-webpack-plugin": "^0.2.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "browser-sync": "^2.18.13",
-    "browser-sync-webpack-plugin": "^1.2.0",
-    "connect-history-api-fallback": "^1.4.0",
     "copy-webpack-plugin": "^4.2.0",
     "copyfiles": "^1.2.0",
     "css-loader": "^0.28.7",
@@ -39,6 +38,7 @@
     "colors": "^1.1.2",
     "errorify": "^0.3.1",
     "live-server": "^1.2.0",
+    "npm-run-all": "^4.1.1",
     "pkgcloud": "^1.4.0",
     "semver": "^5.3.0",
     "teamcity-properties": "^1.1.0",
