--- a/package.json
+++ b/package.json
@@ -6,28 +6,51 @@
   "scripts": {
     "build": "node build.js --should-build",
     "setup": "node build.js --should-build --setup",
-    "webpack-dev-server" : "node_modules/.bin/webpack-dev-server --open",
+    "webpack-dev-server": "node_modules/.bin/webpack-dev-server --open",
     "local-build": "node build.js --should-build --local --ui=$UI --data=$DATA --validation=$VALIDATION --analytics=$ANALYTICS",
-    "start" : "node_modules/.bin/npm-run-all -p webpack-dev-server local-build"
+    "start": "node_modules/.bin/npm-run-all -p webpack-dev-server local-build",
+    "test": "node_modules/.bin/karma start karma.conf.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "angular": "^1.6.7",
+    "angular-mocks": "^1.6.7",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-minify-webpack-plugin": "^0.2.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^8.0.0",
+    "browserify": "^14.5.0",
+    "browserify-istanbul": "^3.0.1",
     "copy-webpack-plugin": "^4.2.0",
     "copyfiles": "^1.2.0",
     "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
     "immutable": "^3.8.2",
+    "isparta": "^4.0.0",
+    "jasmine-core": "^2.8.0",
+    "json-fixtures": "^0.1.1",
     "json-loader": "^0.5.7",
+    "karma": "^1.7.1",
+    "karma-babel-preprocessor": "^7.0.0",
+    "karma-browserify": "^5.1.2",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-fixture": "^0.2.6",
+    "karma-html-reporter": "^0.2.7",
+    "karma-jasmine": "^1.1.0",
+    "karma-json-fixtures-preprocessor": "0.0.6",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-teamcity-reporter": "^1.0.1",
     "lodash": "^4.17.4",
     "raw-loader": "^0.5.1",
     "style-loader": "^0.19.0",
     "supports-color": "^5.0.0",
+    "watchify": "^3.9.0",
     "webpack": "^3.8.1",
     "webpack-cleanup-plugin": "^0.5.1",
     "webpack-dev-middleware": "^1.12.0",
