--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: node_js
 node_js:
 - "node"
 script:
-- npm run test
+- node_modules/.bin/karma start --reporters teamcity --single-run --browsers PhantomJS --colors false
