--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "node build.js --should-build",
     "setup": "node build.js --should-build --setup",
-    "webpack-dev-server": "node_modules/.bin/webpack-dev-server --open",
+    "webpack-dev-server": "node_modules/.bin/webpack-dev-server --open --content-base=$BUILD_PATH",
     "local-build": "node build.js --should-build --local --ui=$UI --data=$DATA --validation=$VALIDATION --analytics=$ANALYTICS",
     "start": "node_modules/.bin/npm-run-all -p webpack-dev-server local-build",
     "test": "node_modules/.bin/karma start karma.conf.js"
@@ -23,11 +23,13 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^8.0.0",
+    "bootstrap-css-only": "^3.0.0",
     "browserify": "^14.5.0",
     "browserify-istanbul": "^3.0.1",
     "copy-webpack-plugin": "^4.2.0",
     "copyfiles": "^1.2.0",
     "css-loader": "^0.28.7",
+    "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "immutable": "^3.8.2",
     "isparta": "^4.0.0",
@@ -46,8 +48,12 @@
     "karma-mocha-reporter": "^2.2.5",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-teamcity-reporter": "^1.0.1",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
     "lodash": "^4.17.4",
+    "materialize-css": "^1.0.0-alpha.3",
     "raw-loader": "^0.5.1",
+    "semantic-ui-css": "^2.2.12",
     "style-loader": "^0.19.0",
     "supports-color": "^5.0.0",
     "watchify": "^3.9.0",
