--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "example-basic-input-experience": "node_modules/.bin/webpack-dev-server --open --content-base=basic-input-experience",
         "example-multiple-action-templates": "node_modules/.bin/webpack-dev-server --open --content-base=multiple-action-templates",
         "example-basic-analytics-experience": "node_modules/.bin/webpack-dev-server --open --content-base=basic-analytics-experience",
-        "example-add-class-property-to-video": "node_modules/.bin/webpack-dev-server --open --content-base=add-class-property-to-video"
+        "example-add-class-property-to-video": "node_modules/.bin/webpack-dev-server --open --content-base=add-class-property-to-video",
+        "example-filters": "node_modules/.bin/webpack-dev-server --open --content-base=filters"
     },
     "author": "",
     "license": "ISC",
