--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     },
     "dependencies": {
         "colors": "^1.1.2",
+        "copyfiles": "^1.2.0",
         "errorify": "^0.3.1",
         "live-server": "^1.2.0",
         "npm-run-all": "^4.1.1",
