Fixed firing without timeAt for Percent cue points

--- a/package.json
+++ b/package.json
@@ -10,21 +10,24 @@
         "local-build": "node build.js --should-build --local --ui=$UI --data=$DATA --validation=$VALIDATION --analytics=$ANALYTICS",
         "start": "node_modules/.bin/npm-run-all -p webpack-dev-server local-build",
         "test": "node_modules/.bin/karma start karma.conf.js",
-        "example-add-class-action": "node_modules/.bin/webpack-dev-server --open --content-base=add-class-action",
-        "example-before-after-content": "node_modules/.bin/webpack-dev-server --open --content-base=before-after-content",
-        "example-embedded-states": "node_modules/.bin/webpack-dev-server --open --content-base=embedded-states",
-        "example-end-at": "node_modules/.bin/webpack-dev-server --open --content-base=end-at",
-        "example-state-id-validation": "node_modules/.bin/webpack-dev-server --open --content-base=state-id-validation",
-        "example-basic-video-experience": "node_modules/.bin/webpack-dev-server --open --content-base=basic-video-experience",
-        "example-basic-ivx-io-experience": "node_modules/.bin/webpack-dev-server --open --content-base=ivx-io-experience",
-        "example-basic-navigation-experience": "node_modules/.bin/webpack-dev-server --open --content-base=basic-navigation-experience",
-        "example-basic-input-experience": "node_modules/.bin/webpack-dev-server --open --content-base=basic-input-experience",
-        "example-multiple-action-templates": "node_modules/.bin/webpack-dev-server --open --content-base=multiple-action-templates",
-        "example-basic-analytics-experience": "node_modules/.bin/webpack-dev-server --open --content-base=basic-analytics-experience",
-        "example-add-class-property-to-video": "node_modules/.bin/webpack-dev-server --open --content-base=add-class-property-to-video",
-        "example-add-events-to-video": "node_modules/.bin/webpack-dev-server --open --content-base=add-events-to-video",
-        "example-state-registration-service": "node_modules/.bin/webpack-dev-server --open --content-base=state-registration-service",
-        "example-filters": "node_modules/.bin/webpack-dev-server --open --content-base=filters"
+        "example:add-class-action": "node_modules/.bin/webpack-dev-server --open --content-base=add-class-action",
+        "example:before-after-content": "node_modules/.bin/webpack-dev-server --open --content-base=before-after-content",
+        "example:dispose-video-events": "node_modules/.bin/webpack-dev-server --open --content-base=dispose-video-events",
+        "example:embedded-states": "node_modules/.bin/webpack-dev-server --open --content-base=embedded-states",
+        "example:end-at": "node_modules/.bin/webpack-dev-server --open --content-base=end-at",
+        "example:ivx-io-experience": "node_modules/.bin/webpack-dev-server --open --content-base=ivx-io-experience",
+        "example:state-id-validation": "node_modules/.bin/webpack-dev-server --open --content-base=state-id-validation",
+        "example:basic-video-experience": "node_modules/.bin/webpack-dev-server --open --content-base=basic-video-experience",
+        "example:basic-ivx-io-experience": "node_modules/.bin/webpack-dev-server --open --content-base=ivx-io-experience",
+        "example:basic-navigation-experience": "node_modules/.bin/webpack-dev-server --open --content-base=basic-navigation-experience",
+        "example:basic-input-experience": "node_modules/.bin/webpack-dev-server --open --content-base=basic-input-experience",
+        "example:multiple-action-templates": "node_modules/.bin/webpack-dev-server --open --content-base=multiple-action-templates",
+        "example:basic-analytics-experience": "node_modules/.bin/webpack-dev-server --open --content-base=basic-analytics-experience",
+        "example:add-class-property-to-video": "node_modules/.bin/webpack-dev-server --open --content-base=add-class-property-to-video",
+        "example:add-events-to-video": "node_modules/.bin/webpack-dev-server --open --content-base=add-events-to-video",
+        "example:state-registration-service": "node_modules/.bin/webpack-dev-server --open --content-base=state-registration-service",
+        "example:percent-cue-points": "node_modules/.bin/webpack-dev-server --open --content-base=percent-cue-points",
+        "example:filters": "node_modules/.bin/webpack-dev-server --open --content-base=filters"
     },
     "author": "",
     "license": "ISC",
@@ -83,6 +86,7 @@
         "colors": "^1.1.2",
         "copyfiles": "^1.2.0",
         "errorify": "^0.3.1",
+        "is-wsl": "^1.1.0",
         "live-server": "^1.2.0",
         "npm-run-all": "^4.1.1",
         "pkgcloud": "^1.4.0",
